--- a/index2.html
+++ b/index2.html
@@ -10,16 +10,16 @@
 <body>
     <!-- present day, API jokes, and reminders  -->
     <article class="container" id="container">
-        <H1 class="today" id="today"></H1>
-        <p class="api" id="api"></p>
-        <p class="remind" id="remind"></p>
+        <H1 class="today" id="today"></H1> <!-- day of today -->
+        <p class="api" id="api"></p> <!-- Fun Fact -->
+        <p class="remind" id="remind"></p> <!-- events -->
     </article>
     
     <!-- buttons -->
     <section class="buttons">
         <button type="button" class="share" id="share">Share</button>
-        <button type="button" class="new" id="new">Click to get a new fact.</button>
-        <button type="button" class="save" id="save">Save</button>
+        <button type="button" class="new" id="new">Get a new fact.</button>
+        <button type="button" class="save" id="save">Save fact</button>
     </section>
     
      <!-- calendar -->
@@ -30,7 +30,7 @@
     <!-- create or add info button -->
     <footer>
         <button type="button" class="create" id="create">+</button>
-        <p>create an event or reminder</p>
+        <p>create event or reminder</p>
     </footer>
     <script src=""></script>
 </body>
