--- a/calIndex.html
+++ b/calIndex.html
@@ -4,10 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <!-- <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    /> -->
+
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
@@ -18,8 +15,8 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./Develop/style.css" />
-    <title>Work Day Scheduler</title>
+    <link rel="stylesheet" href="" />
+    <title>Day Planner</title>
   </head>
 
   <body>
@@ -31,7 +28,7 @@
     </header>
 
     <div class="container">
-      <!-- Timeblocks go here -->
+      <!-- Timeblocks -->
       <div class="row">
         <div class="col-sm hour time-block" id="hour1"></div>
         <textarea class="col-sm description" id="note1"></textarea>
