--- a/index2.html
+++ b/index2.html
@@ -12,27 +12,28 @@
 <body>
     <div class = " relative h-screen bg-purple-600  top-0">
         <br><h1 class = "text-white text-3xl text-center">Today is...</h1><br><br>
-    <div class = "p-6 max-w-2xl max-h-96 flex  mx-auto bg-white rounded-xl shadow-lg flex  space-x-4 text-center relative ">
+    <div class = " md:flex p-6 max-w-2xl mx-auto bg-white rounded-xl shadow-lg flex  space-x-4 text-center">
     <!-- present day, API jokes, and reminders  -->
-    <article class="container static block" id="container">
+    <article class="container" id="container">
         <H1 class="today" id="today">Monday, August 1, 2022</H1> <!-- day of today -->
         <p class="api" id="api">Fun Facts</p> <!-- Fun Fact -->
         <p class="remind" id="remind">Reminders for the day</p> <!-- events -->
     </article>
     <br><br>
     <br>
+    
     <!-- buttons -->
-    <div class = "container static">
-    <section class="buttons">
-        <button type="button" class="px-4 py-1 text-sm text-purple-600 font-semibold rounded-full border border-purple-200 hover:text-white hover:bg-purple-600 hover:border-transparent focus:outline-none focus:ring-2 focus:ring-purple-600 focus:ring-offset-2 new" id="new">Get a new fact.</button>
-        <button type="button" class="px-4 py-1 text-sm text-purple-600 font-semibold rounded-full border border-purple-200 hover:text-white hover:bg-purple-600 hover:border-transparent focus:outline-none focus:ring-2 focus:ring-purple-600 focus:ring-offset-2 save" id="save">Save fact</button>
+    <div class = "container relative object-bottom">
+    <section class="text-bottom buttons">
+        <button type="button" class="px-4 py-1 text-sm text-purple-600 font-semibold rounded-full border border-purple-200 hover:text-white hover:bg-purple-600 hover:border-transparent focus:outline-none focus:ring-2 focus:ring-purple-600 focus:ring-offset-2 align-text-bottom new" id="new">Get a new fact.</button><br>
+        <button type="button" class="px-4 py-1 text-sm text-purple-600 font-semibold rounded-full border border-purple-200 hover:text-white hover:bg-purple-600 hover:border-transparent focus:outline-none focus:ring-2 focus:ring-purple-600 focus:ring-offset-2 align-text-bottom save" id="save">Save fact</button>
     </section>
     </div>
-     <!-- calendar -->
+     <!-- calendar 
     <aside>
         <div>calendar</div>
         <div class="calendar" id="calendar">calendar</div>
-    </aside>
+    </aside>-->
  
     <!-- below is jquery called for merge calIndex html-->
         <script src="https://code.jquery.com/jquery-3.5.0.js"></script> 
@@ -58,8 +59,8 @@
     <script src=""></script>
 
 
-
-
+</div>
+</div>
 
    
           
