--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="">
 </head>
 <body>
-    <div class = "h-screen bg-purple-600">
+    <div class = "h-screen bg-blue-200">
     <h1 class ="text-3xl text-center font-bold underline text-white">Lively Planner Form</h1>   <br></br> 
     <!-- form to hold the question, dropdown, and button -->
     <div class = "p-6 max-w-sm mx-auto bg-white rounded-xl shadow-lg flex items-center space-x-4 text-center">
@@ -23,7 +23,7 @@
         <option value="fun-fact">Fun Fact</option>
         <option value="random">Random</option>
     </select> <br><br>
-    <button class="px-4 py-1 text-sm text-purple-600 font-semibold rounded-full border border-purple-200 hover:text-white hover:bg-purple-600 hover:border-transparent focus:outline-none focus:ring-2 focus:ring-purple-600 focus:ring-offset-2">Ready to Plan!</button>
+    <button class="px-4 py-1 text-sm text-blue-700 font-semibold rounded-full border border-blue-700 hover:bg-white hover:border-transparent focus:outline-none focus:ring-2 focus:ring-blue-600 focus:ring-offset-2 align-text-bottom">Ready to Plan!</button>
    </form>
 </div>
 </div>
@@ -44,5 +44,6 @@
 </script> 
     <!-- move above code to JS -->
 
-<script src="script.js"></script></body>
+<script src="./script.js"></script>
+</body>
 </html>
