--- a/combined-html.html
+++ b/combined-html.html
@@ -9,6 +9,7 @@
 
     <title>Lively Planner Form</title>
     <link rel="stylesheet" href="./Assets/style.css">
+    <link rel = "stylesheet" href = "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
 </head>
 
 <body>
@@ -27,27 +28,99 @@
         <option value="fun-fact">Fun Fact</option>
         <option value="random">Random</option>
     </select> <br><br>
-    <button class="px-4 py-1 text-sm text-blue-700 font-semibold rounded-full border border-blue-700 hover:bg-white hover:border-transparent focus:outline-none focus:ring-2 focus:ring-blue-600 focus:ring-offset-2 align-text-bottom"><a href="#index2">Ready to Plan!</a></button>
+    <button type = "submit" class="px-4 py-1 text-sm text-blue-700 font-semibold rounded-full border border-blue-700 hover:bg-white hover:border-transparent focus:outline-none focus:ring-2 focus:ring-blue-600 focus:ring-offset-2 align-text-bottom" id = "readytoPlan" onclick = "showIndex2()"></a>Ready to Plan!</a></button>
    </form>
 </div>
 </div>
+
+
 
 <!-- Beginning of index2 (displaying joke)-->
 <div id="index2" class="index2 hide mx-auto relative h-screen bg-blue-200  top-0" tabindex="0">
     <br><h1 class="text-blue-700 text-3xl text-center">Today is...</h1><br>
 
-<div class="mx-auto space-x-4 p-6 rounded-xl max-w-2xl border-2 border-rounded border-blue-300 bg-white text-center" id="container">
+<div class="mx-auto space-x-4 p-6 rounded-xl max-w-2xl border-2 border-rounded border-blue-300 bg-white text-center" id="container1">
     <h1 class="today" id="today">Monday, August 1, 2022</h1> <!-- day of today -->
     <p class="api" id="api">Fun Facts</p> <!-- Fun Fact -->
     <p class="remind" id="remind">Reminders for the day</p> <!-- events -->
  <!-- buttons -->
 <section class="text-bottom buttons">
-    <button type="button" class="px-4 py-1 text-sm text-blue-700 font-semibold rounded-full border border-blue-700 hover:bg-white hover:border-transparent focus:outline-none focus:ring-2 focus:ring-blue-600 focus:ring-offset-2 align-text-bottom new" id="new">Get a new fact.</button>
-    <button type="button" class="px-4 py-1 text-sm text-blue-700 font-semibold rounded-full border border-blue-700 hover:bg-white hover:border-transparent focus:outline-none focus:ring-2 focus:ring-blue-600 focus:ring-offset-2 align-text-bottom save" id="save"><a href="#index3">Save fact</a></button>
+    <button type="button" class="px-4 py-1 text-sm text-blue-700 font-semibold rounded-full border border-blue-700 hover:bg-white hover:border-transparent focus:outline-none focus:ring-2 focus:ring-blue-600 focus:ring-offset-2 align-text-bottom new" id="new">Get a new content.</button>
+    <button type="button" class="px-4 py-1 text-sm text-blue-700 font-semibold rounded-full border border-blue-700 hover:bg-white hover:border-transparent focus:outline-none focus:ring-2 focus:ring-blue-600 focus:ring-offset-2 align-text-bottom save" id="save" onclick = "saveConfirm()"><a href="#index3">Save</a></button>
+    <button type ="button" class ="px-4 py-1 text-sm text-blue-700 font-semibold rounded-full border border-blue-700 hover:bg-white hover:border-transparent focus:outline-none focus:ring-2 focus:ring-blue-600 focus:ring-offset-2 align-text-bottom create" id="create" onclick ="showIndex3()">Create Reminder</button>
+    <p id = "saveConfirmation"></p>
 </section>
- 
 </div>
 <br><br><br><br><br><br>
+
+<div class="container" id=container>
+  <div class = "calendar" id ="calendar">
+  <div class="month">
+    <i class ="fas fa-angle-left prev"></i>
+             <h1 class = "monthName"></h1>
+    <i class ="fas fa-angle-right next"></i>
+  </div>
+  <div class="weekdays">
+      <div>Sun</div>
+      <div>Mon</div>
+      <div>Tue</div>
+      <div>Wed</div>
+      <div>Thurs</div>
+      <div>Fri</div>
+      <div>Sat</div>
+    </div>
+  <div  class="days">
+    <div class = "prev-dates">26</div> 
+    <div class = "prev-dates">27</div>
+    <div class = "prev-dates">28</div>
+    <div class = "prev-dates">29</div>
+    <div class = "prev-dates">30</div>
+    <div>1</div>
+    <div>2</div>
+    <div>3</div>
+    <div>4</div>
+    <div>5</div>
+    <div class="todaysDate">6</div>
+    <div>7</div>
+    <div>8</div>
+    <div>9</div>
+    <div>10</div>
+    <div>11</div>
+    <div>12</div>
+    <div>13</div>
+    <div>14</div>
+    <div>15</div>
+    <div>16</div>
+    <div>17</div>
+    <div>18</div>
+    <div>19</div>
+    <div>20</div>
+    <div>21</div>
+    <div>22</div>
+    <div>23</div>
+    <div>24</div>
+    <div>25</div>
+    <div>26</div>
+    <div>27</div>
+    <div>28</div>
+    <div>29</div>
+    <div>30</div>
+    <div>31</div>
+    <div class = "next-days">1</div>
+    <div class = "next-days">2</div>
+    <div class = "next-days">3</div>
+    <div class = "next-days">4</div>
+    <div class = "next-days">5</div>
+</div>
+</div>
+ </div>
+</div>
+</div>
+
+
+
+
+
 
 <!-- Beginning of index3 (calIndex - planner) -->
 <div id="index3" class="index3 bg-blue-200">
@@ -57,7 +130,7 @@
       <p id="currentDay" class="lead"></p>
     </header>
 
-    <div class="container">
+    <div class="container1">
       <!-- Timeblocks -->
       <div class="row">
         <div class="monday" id="monday">Monday</div>
@@ -94,11 +167,14 @@
         <textarea class="mx-auto space-x-4 p-6 rounded-xl max-w-2xl border-2 border-rounded border-blue-300 bg-white text-center" id="note7"></textarea>
         <button class="px-4 py-1 text-sm text-blue-700 font-semibold rounded-full border border-blue-700 hover:bg-white hover:border-transparent focus:outline-none focus:ring-2 focus:ring-blue-600 focus:ring-offset-2 align-text-bottom" id="event">Save</button>
       </div>
+      <button class = "px-4 py-1 text-sm text-blue-700 font-semibold rounded-full border border-blue-700 hover:bg-white hover:border-transparent focus:outline-none focus:ring-2 focus:ring-blue-600 focus:ring-offset-2 align-text-bottom" id="backtoDailyPage" onclick = "backtoDaily()">Go Back to daily page</button>
     </div>
 </div>
+
+
           
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-<script type="text/javascript" src="./script.js"></script>
+<script type="text/javascript" src="script.js"></script>
 </body>
 </html>
