--- a/combined-html.html
+++ b/combined-html.html
@@ -39,17 +39,35 @@
 <div class="mx-auto space-x-4 p-6 rounded-xl max-w-2xl border-2 border-rounded border-blue-300 bg-white text-center" id="container">
     <h1 class="today" id="today">Monday, August 1, 2022</h1> <!-- day of today -->
     <p class="api" id="api">Fun Facts</p> <!-- Fun Fact -->
-    <p class="remind" id="remind">Reminders for the day</p> <!-- events -->
  <!-- buttons -->
 <section class="text-bottom buttons">
     <button type="button" class="px-4 py-1 text-sm text-blue-700 font-semibold rounded-full border border-blue-700 hover:bg-white hover:border-transparent focus:outline-none focus:ring-2 focus:ring-blue-600 focus:ring-offset-2 align-text-bottom new" id="new">Get a new fact.</button>
-    <button type="button" class="px-4 py-1 text-sm text-blue-700 font-semibold rounded-full border border-blue-700 hover:bg-white hover:border-transparent focus:outline-none focus:ring-2 focus:ring-blue-600 focus:ring-offset-2 align-text-bottom save" id="save"><a href="#index3">Save fact</a></button>
 </section>
- 
+ <br><br>
 </div>
+
 <br><br><br><br><br><br>
 
-<!-- Beginning of index3 (calIndex - planner) -->
+<div class = "p-6 h-2/5 w-2/5 bg-white rounded-xl shadow-lg flex space-x-4  absolute inset-y-50 left-10 " id = "toDoContainer">
+  <form class= "text-center"  id="toDo">To Do List<br><br>
+   <input type="text" class="rounded-full border border-blue-700 align-text-bottom" id="toDoInput" list="toDoListInput"><br><br>
+   <button type = "submit" class="px-4 py-1 text-sm text-blue-700 font-semibold rounded-full border border-blue-700 hover:bg-white hover:border-transparent focus:outline-none focus:ring-2 focus:ring-blue-600 focus:ring-offset-2 align-text-bottom" id  ="submitItem">Add to List</button>
+</form>
+<br><br>
+<div class = "absolute inset-x-0 bottom-20 text-center" id="listContainer"
+<checkbox class ="border border-blue-700 ">Example Item</checkbox>
+</div>
+</div>
+
+<div class = "p-6 h-2/5 w-2/5 bg-white rounded-xl shadow-lg flex space-x-4  absolute inset-y-50 right-10  ">
+  <div class = "border-blue-700 border-rounded text-center" id="pictureContainer">
+    PLACEHOLDER FOR PICTURE FROM API
+  </div>
+  
+</div>
+
+<!--------------NO LONGER NEEDED
+ Beginning of index3 (calIndex - planner) 
 <div id="index3" class="index3 bg-blue-200">
 
     <header class="jumbotron">
@@ -58,7 +76,7 @@
     </header>
 
     <div class="container">
-      <!-- Timeblocks -->
+       Timeblocks 
       <div class="row">
         <div class="monday" id="monday">Monday</div>
         <textarea class="mx-auto space-x-4 p-6 rounded-xl max-w-2xl border-2 border-rounded border-blue-300 bg-white text-center" id="note1"></textarea>
@@ -94,6 +112,7 @@
         <textarea class="mx-auto space-x-4 p-6 rounded-xl max-w-2xl border-2 border-rounded border-blue-300 bg-white text-center" id="note7"></textarea>
         <button class="px-4 py-1 text-sm text-blue-700 font-semibold rounded-full border border-blue-700 hover:bg-white hover:border-transparent focus:outline-none focus:ring-2 focus:ring-blue-600 focus:ring-offset-2 align-text-bottom" id="event">Save</button>
       </div>
+      ------>
     </div>
 </div>
           
