--- a/combined-html.html
+++ b/combined-html.html
@@ -23,7 +23,7 @@
     <!-- in the select tag the attribute of required was added to ensure an item was selected  -->
     <select name="category" id="category" required>
         <option value="">--Please choose an option--</option>
-        <option value="joke">Programming Joke</option>
+        <option value="joke">Joke</option>
         <option value="fun-fact">Fun Fact</option>
         <option value="random">Random</option>
     </select> <br><br>
@@ -41,7 +41,7 @@
     <p class="api" id="api">Fun Facts</p> <!-- Fun Fact -->
  <!-- buttons -->
 <section class="text-bottom buttons">
-    <button type="button" class="px-4 py-1 text-sm text-blue-700 font-semibold rounded-full border border-blue-700 hover:bg-white hover:border-transparent focus:outline-none focus:ring-2 focus:ring-blue-600 focus:ring-offset-2 align-text-bottom new" id="new">Get a new fact.</button>
+    <button type="button" class="px-4 py-1 text-sm text-blue-700 font-semibold rounded-full border border-blue-700 hover:bg-white hover:border-transparent focus:outline-none focus:ring-2 focus:ring-blue-600 focus:ring-offset-2 align-text-bottom new" id="new">Get a new content.</button>
   </section>
   </div>
 <br>
@@ -55,9 +55,9 @@
    <input type="text" class="rounded-full border border-blue-700 align-text-bottom" id="toDoInput"><br><br>
    <button type = "submit" class="px-4 py-1 text-sm text-blue-700 font-semibold rounded-full border border-blue-700 hover:bg-white hover:border-transparent focus:outline-none focus:ring-2 focus:ring-blue-600 focus:ring-offset-2 align-text-bottom" id  ="submitItem">Add to List</button>
 </form>
-<div class = "absolute inset-x-0 bottom-20 justify-items-center" id="listContainer">
+<div class = "absolute inset-x-0 bottom-20 text-center" id="listContainer">
   <p><span id="todo-count">0</span></p>
-  <ul  class = "text-left" id="todoList">
+  <ul  class = "text-center" id="todoList">
 
   </ul>
 
