--- a/combined-html.html
+++ b/combined-html.html
@@ -50,29 +50,49 @@
 </div>
 
  <br><br>
+
+<!-- bellow is todo list-->
 <div class = "p-6 h-2/5 w-2/5 bg-white rounded-xl shadow-lg flex space-x-4  absolute inset-y-50 left-10 " id = "toDoContainer">
   <form class= "text-center"  id="toDo" method = "POST">To Do List<br><br>
-   <input type="text" class="rounded-full border border-blue-700 align-text-bottom" id="toDoInput"><br><br>
-   <button type = "submit" class="px-4 py-1 text-sm text-blue-700 font-semibold rounded-full border border-blue-700 hover:bg-white hover:border-transparent focus:outline-none focus:ring-2 focus:ring-blue-600 focus:ring-offset-2 align-text-bottom" id  ="submitItem">Add to List</button>
-</form>
+    <input type="text" class="rounded-full border border-blue-700 align-text-bottom" id="toDoInput"><br><br>
+    <button type = "submit" class="px-4 py-1 text-sm text-blue-700 font-semibold rounded-full border border-blue-700 hover:bg-white hover:border-transparent focus:outline-none focus:ring-2 focus:ring-blue-600 focus:ring-offset-2 align-text-bottom" id  ="submitItem">Add to List</button>
+  </form>
 
-<br><br>
-<div class = "absolute inset-x-0 bottom-20 text-center" id="listContainer">
-  <p><span id="todo-count">0</span></p>
-  <ul id="todoList">
+  <br><br>
+  <div class = "absolute inset-x-0 bottom-20 text-center" id="listContainer">
+    <p><span id="todo-count">0</span></p>
+    <ul id="todoList">
 
-  </ul>
+    </ul>
 
-</div>
-</div>
-
-<div class = "p-6 h-2/5 w-2/5 bg-white rounded-xl shadow-lg flex space-x-4 justify-items-center absolute inset-y-50 right-10  ">
-  <div class = "border-blue-700 border-rounded " id="resourceContainer">
-    <a  class = "underline underline-offset-1 text-center" href = "https://developer.mozilla.org/en-US/">mdn webdocs</a><br>
-    <a  class = "underline underline-offset-1 text-center" href = "https://tailwindcss.com/"> Tailwind CSS</a><br>
   </div>
-  
 </div>
+
+
+
+<!-- bellow is source link-->
+<div class = "p-6 h-2/5 w-2/5 bg-white rounded-xl shadow-lg flex space-x-4 justify-items-center absolute inset-y-50 right-10 border-blue-700 border-rounded" id="srcContainer">
+  <form class= "text-center"  id="source" method = "POST">Sources List<br><br>
+    <input type="text" class="rounded-full border border-blue-700 align-text-bottom" id="srcInput"><br><br>
+    <button type = "submit" class="px-4 py-1 text-sm text-blue-700 font-semibold rounded-full border border-blue-700 hover:bg-white hover:border-transparent focus:outline-none focus:ring-2 focus:ring-blue-600 focus:ring-offset-2 align-text-bottom" id  ="submitSrc">Add Source</button>
+  </form>
+
+  <br><br>
+  <div class = "absolute inset-x-0 bottom-20 text-center" id="listContainer">
+    <p><span id="src-count"></span></p>
+    <ul id="srcList">
+
+    </ul>
+      
+      <a  class = "underline underline-offset-1 text-center" href = "https://developer.mozilla.org/en-US/">mdn webdocs</a><br>
+      <a  class = "underline underline-offset-1 text-center" href = "https://tailwindcss.com/"> Tailwind CSS</a><br>
+      
+  </div>
+</div>
+
+
+
+
 
 <!--------------NO LONGER NEEDED
  Beginning of index3 (calIndex - planner) 
