fail to fix small thing

--- a/combined-html.html
+++ b/combined-html.html
@@ -60,7 +60,7 @@
 
   <br><br>
   <div class = "absolute inset-x-0 bottom-20 text-center" id="listContainer">
-    <p><span id="todo-count">0</span></p>
+    <p><span id="todo-count"></span></p>
     <ul id="todoList">
 
     </ul>
