--- a/combined-html.html
+++ b/combined-html.html
@@ -28,7 +28,7 @@
         <option value="fun-fact">Fun Fact</option>
         <option value="random">Random</option>
     </select> <br><br>
-    <button type = "submit" class="px-4 py-1 text-sm text-blue-700 font-semibold rounded-full border border-blue-700 hover:bg-white hover:border-transparent focus:outline-none focus:ring-2 focus:ring-blue-600 focus:ring-offset-2 align-text-bottom" id ="readytoPlan" onclick = "showIndex2()"</a>Ready to Plan!</a></button>
+    <button type = "submit" class="px-4 py-1 text-sm text-blue-700 font-semibold rounded-full border border-blue-700 hover:bg-white hover:border-transparent focus:outline-none focus:ring-2 focus:ring-blue-600 focus:ring-offset-2 align-text-bottom" id ="readytoPlan" onclick = "showIndex2()" <a>Ready to Plan!</a></button>
    </form>
 
    
