--- a/combined-html.html
+++ b/combined-html.html
@@ -74,8 +74,8 @@
         <input type="text" class="rounded-full border border-blue-700 align-text-bottom" id="toDoInput"><br><br>
         <button type = "submit" class="px-4 py-1 text-sm text-blue-700 font-semibold rounded-full border border-blue-700 hover:bg-white hover:border-transparent focus:outline-none focus:ring-2 focus:ring-blue-600 focus:ring-offset-2 align-text-bottom" id  ="submitItem">Add to List</button>
       </form>
-
-      <div class = " inset-x-0 bottom-20 text-center" id="listContainer">
+</div>
+      <div class = " inset-x-0 bottom-20 text-center justify-center" id="listContainer">
         <p><span id="todo-count"></span></p>
         <ul id="todoList">
     
