--- a/combined-html.html
+++ b/combined-html.html
@@ -62,7 +62,7 @@
 </section>
 </div>
 <br>
-<div class = "mx-auto max-w-2xl space-x-4 p-6 rounded-xl  border-2 border-rounded border-blue-300 bg-white text-center" id = "timerContainer">
+<div class = "mx-auto max-w-xl space-x-4 p-6 rounded-xl  border-2 border-rounded border-blue-300 bg-white text-center" id = "timerContainer">
   <a class="" href="https://youtu.be/cTH824WnA3U"><iframe width="420" height="236.25" src="https://www.youtube.com/embed/cTH824WnA3U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></a>
   </div>
 
@@ -139,7 +139,7 @@
     </style>
 </div>
 </div>
-
+</div>
 </div>
 </div>
 </div>
