--- a/combined-html.html
+++ b/combined-html.html
@@ -62,8 +62,8 @@
 </section>
 </div>
 <br>
-<div class = "mx-auto max-w-xl space-x-4 p-6 rounded-xl  border-2 border-rounded border-blue-300 bg-white text-center" id = "timerContainer">
-  <a class="" href="https://youtu.be/cTH824WnA3U"><iframe width="420" height="236.25" src="https://www.youtube.com/embed/cTH824WnA3U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></a>
+<div class = "mx-auto max-w-md space-x-4 px-0 rounded-xl  border-2 border-rounded border-blue-300 bg-white justify-center" id = "timerContainer">
+  <a class="" href="https://youtu.be/cTH824WnA3U"><iframe width="400" height="236.25" src="https://www.youtube.com/embed/cTH824WnA3U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></a>
   </div>
 
 
