--- a/combined-html.html
+++ b/combined-html.html
@@ -112,19 +112,20 @@
   <form id="sticky-note1">
 
     <label for="first">Jot down some notes! Click Enter to clear all.</label>
+    <br>
     <input type="text" class="form-input" name="quick-note" placeholder="Review flashcards"/>
 </form>
 
 
 <form id="sticky-note2">
 
-    <label for="second">does this need a label?</label>
+    <label for="second"></label>
     <input type="text" class="form-input" name="quick-note" placeholder="Review flashcards"/>
 </form>
 
 <form id="sticky-note3">
 
-    <label for="third">does this need a label?</label>
+    <label for="third"></label>
     <input type="text" class="form-input" name="quick-note" placeholder="Review flashcards"/>
 </form>
 
