--- a/combined-html.html
+++ b/combined-html.html
@@ -68,7 +68,7 @@
 
 
 <div class="flex flex-col md:flex-row"> 
-  <div class = "p-6 m-1 md:w-6/12 bg-white rounded-xl shadow-lg flex space-x-4 flex justify-center   flex-col" id = "toDoContainer">
+  <div class = "center-section p-6 m-1 md:w-6/12 bg-white rounded-xl shadow-lg flex space-x-4 flex justify-center   flex-col" id = "toDoContainer">
     <div class="flex justify-center">
       <form class= "text-center"  id="toDo" method = "POST">To Do List<br><br>
         <input type="text" class="rounded-full border border-blue-700 align-text-bottom" id="toDoInput"><br><br>
@@ -89,7 +89,7 @@
   </div>
 
 
-  <div class = "p-6 m-1 md:w-6/12 bg-white rounded-xl shadow-lg flex space-x-4 justify-items-center  flex justify-center ">
+  <div class = "center-section p-6 m-1 md:w-6/12 bg-white rounded-xl shadow-lg flex space-x-4 justify-items-center  flex justify-center ">
     <div class = "border-blue-700 border-rounded " id="resourceContainer">
       
 
@@ -132,8 +132,8 @@
 
 
 <style> 
-    input[type-=text] {
-      width: 200%;
+    input[type=text] {
+      width: 100%;
       border: 2px solid lightblue;
       border-radius: 4px;
     }
